yaml/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ncas-general-cdl-creator-frontend 
  namespace: ncas-data-activity
  labels:
    app: ncas-general-cdl-creator-frontend 
spec:
  selector:
    matchLabels:
      app: ncas-general-cdl-creator-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: ncas-general-cdl-creator-frontend
    spec:
      containers:
      - name: ncas-general-cdl-creator-frontend 
        image: jmhampton/ncas-general-cdl-creator-frontend:0.1.1
        ports:
        - containerPort: 80
