yaml/frontend-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: ncas-general-cdl-creator-frontend-service
  namespace: ncas-data-activity
spec:
  selector:
    app: ncas-general-cdl-creator-frontend
  type: ClusterIP
  ports:
  - name: ncas-general-cdl-creator-frontend
    protocol: TCP
    port: 80
    targetPort: 80
